<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_key_nav_bar_category"
        android:title="@string/pref_nav_bar_title">
        <ListPreference
            android:key="@string/pref_key_recent_apps_mod"
            android:title="@string/pref_recent_apps_mod"
            android:summary="%s"
            android:entries="@array/pref_recent_apps_key_entries"
            android:entryValues="@array/pref_recent_apps_key_values"
            android:defaultValue="@string/pref_value_recent_apps_default"/>
        <ListPreference
            android:key="@string/pref_key_long_press_home_behavior"
            android:title="@string/pref_long_press_home_behavior"
            android:summary="%s"
            android:entries="@array/pref_long_press_behaviors"
            android:entryValues="@array/pref_long_press_behavior_values"
            android:defaultValue="@string/pref_value_long_press_home_default"/>
        <ListPreference
            android:key="@string/pref_key_nav_bar_size"
            android:title="@string/pref_nav_bar_size"
            android:summary="%s"
            android:entries="@array/pref_navbar_size_entries"
            android:entryValues="@array/pref_navbar_size_values"
            android:defaultValue="@string/pref_value_navbar_size_default"/>

        <CheckBoxPreference
                android:key="@string/pref_key_action_bar_overflow"
                android:title="@string/pref_action_bar_overflow"
                android:summary="@string/pref_action_bar_overflow_summary"
                android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_hide_carrier_title"
        android:key="@string/pref_key_hide_carrier_category">
        <CheckBoxPreference
            android:key="@string/pref_key_hide_carrier_in_panel"
            android:title="@string/pref_hide_carrier_in_panel"
            android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="@string/pref_key_hide_carrier_in_lockscreen"
                android:title="@string/pref_hide_carrier_in_lockscreen"
                android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_status_bar_title"
        android:key="@string/pref_key_status_bar_icons">
        <CheckBoxPreference
                android:key="@string/pref_key_hide_nfc_icon"
                android:title="@string/pref_hide_nfc_icon"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="@string/pref_key_hide_headset_icon"
                android:title="@string/pref_hide_headset_icon"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="@string/pref_key_hide_gps_icon"
                android:title="@string/pref_hide_gps_icon"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="@string/pref_key_hide_mobile_data_icon"
                android:title="@string/pref_hide_mobile_data_icon"
                android:summary="@string/pref_hide_mobile_data_icon_summary"
                android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>